Add main handlebars structure

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/jass.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Levi's Tech Blog</title>
+    <title>Tech Blog</title>
 </head>
+
 <body>
-    
-    
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+            <li>{{#if logged_in}}
+                <a href="/">Logout</a> |
+                {{else}}
+                <a href="/login">Login</a>
+                {{/if}}
+            </li>
+
+        </ul>
+    </nav>
+    <header>
+        <h1><a href="/">Tech Blog</a></h1>
+    </header>
+    <main class="container container-fluid mt-5">
+        {{{ body }}}
+    </main>
+
+    {{#if logged_in}}
+    <script src="/js/logout.js"></script>
+    {{/if}}
 </body>
+
 </html>
