--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         </ul>
     </nav>
     <header>
-        <h1><a href="/">Tech Blog</a></h1>
+        <h1>Tech Blog</h1>
     </header>
     <main class="container container-fluid mt-5">
         {{{ body }}}
