--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <div>
     <ul>
-        {{#each post}}
+        {{#each posts}}
         <li>{{title}}</li>
         <li>{{content}}</li>
         {{/each}}
