--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,18 @@
+<div>
+    <div>
+        <h2>Login</h2>
+    </div>
+    <form>
+        <label for="username-input"></label>
+        <input type="text" name="username-input" placeholder="username">
 
+        <label for="password-input"></label>
+        <input type="text" name="password-input" placeholder="password">
 
+        <button type="submit" class="btn">Login</button>
+        <a type="button" href="/signup">Sign up</a>
+    </form>
 
-
+</div>
 
 <script src="./js/login.js"></script>
