--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,7 +27,7 @@
     <header>
         <h1>Tech Blog</h1>
     </header>
-    <main class="container container-fluid mt-5">
+    <main>
         {{{body}}}
     </main>
 
