Working on getting login to work with displaying pages

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,14 +4,14 @@
     </div>
     <form>
         <label for="username-input"></label>
-        <input type="text" name="username-input" placeholder="username">
+        <input id="user-name-login" type="text" name="username-input" placeholder="username">
 
         <label for="password-input"></label>
-        <input type="text" name="password-input" placeholder="password">
+        <input id="password-login" type="password" name="password-input" placeholder="password">
 
-        <button type="submit" class="btn">Login</button>
-        <a type="button" href="/signup">Sign up</a>
+        <button type="submit" class="btn login-form">Login</button>
     </form>
+        <a type="button" href="/signup">Sign up</a>
 
 </div>
 
