--- a/views/signUp.handlebars
+++ b/views/signUp.handlebars
@@ -4,12 +4,12 @@
     </div>
     <form>
         <label for="username-input-signup"></label>
-        <input type="text" name="username-input-signup" placeholder="username">
+        <input id="user-name-login" type="text" name="username-input-signup" placeholder="username">
 
         <label for="password-input-signup"></label>
-        <input type="text" name="password-input-signup" placeholder="password">
+        <input id="password-login" type="text" name="password-input-signup" placeholder="password">
 
-        <button type="submit" class="btn">Sign up</button>
+        <button type="submit" class="btn signup-form">Sign up</button>
     </form>
 
 </div>
