--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,18 +12,21 @@
 
 <body>
     <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li>{{#if logged_in}}
-                <a href="/">Logout</a> |
-                {{else}}
-                <a href="/login">Login</a>
-                {{/if}}
-            </li>
+        <h1>
+            <a class="p-3" id="homepagae" href="/">Homepage</a>
+          </h1>
+          <nav>
 
-        </ul>
-    </nav>
+            {{#if logged_in}}
+              <a href="/dashboard"><button
+                  id="my-dashboard"
+                  class="btn btn-light"
+                >My Dashboard</button></a>
+              <button class="btn btn-light" id="logout">Logout</button>
+            {{else}}
+              <a id="login-click" class="p-3" href="/login">Login</a>
+            {{/if}}
+          </nav>
     <header>
         <h1>Tech Blog</h1>
     </header>
