Fixed display after login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
     <div>
         <h2>Login</h2>
     </div>
-    <form>
+    <form class="login-form">
         <label for="username-input"></label>
         <input id="user-name-login" type="text" name="username-input" placeholder="username">
 
